Bug 352506 - Breeze High Contrast color scheme has defaults that are bad for people with low contrast sensitivity vision
Summary: Breeze High Contrast color scheme has defaults that are bad for people with l...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Color scheme (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2015-09-10 05:16 UTC by Erica J.
Modified: 2021-09-21 16:35 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erica J. 2015-09-10 05:16:15 UTC
Breeze High Contrast by default has bright-blue title bars with thin, white text.  This is illegible to me as someone who actually struggles with low contrast sensitivity.  The title bars should have a dark background, just like in Breeze Dark, for maximum visibility.  Additionally, after selecting Breeze High Contrast I can no longer see the icons on buttons.  Because I'm also dyslexic, button icons are incredibly useful for not needing to stop and try to read the text on the buttons.  This can be fixed by switching to the Breeze Dark icons, but this wasn't immediately obvious to me and I'm worried it won't be to some others, either.

Reproducible: Always

Steps to Reproduce:
1. Start from vanilla plasma desktop.
2. Use Colors KCM to change the application color scheme to Breeze High Contrast.
3. Click Apply.

Actual Results:  
It is hard for people with low contrast sensitivity to read the title bar, and button icons seem to have disappeared.

Expected Results:  
People with low contrast sensitivity can suddenly use their desktops as well as everyone else.
Comment 1 Andrew Lake 2015-09-10 05:22:39 UTC
Thanks for reporting Erica. We'll work to improve that color scheme and post candidate color schemes here that we hope you might help us test.
Comment 2 Aaron Honeycutt 2015-09-10 11:42:38 UTC
Yes sadly the icon theme does not get switched by default. As Andrew said we'll work on with some better color options for a more readable titlebar. Thank you for the report!
Comment 3 Filip Fila 2019-12-06 12:42:31 UTC
Unfortunately I believe this is still a problem. 

We've actually been working to solve the problem of white text on the awfully bright Plasma Blue everywhere.

Noah and Carson, would you want to fix the high contrast theme in the meantime?
Comment 4 Nate Graham 2021-09-17 20:47:24 UTC
This would be an easy fix, but first we need to decide--or rather, re-decide--what we want Breeze High Contrast to look like in the first place. Because right now it looks like an old worse version of Breeze Dark which actually has less contrast in many places, such as the what's described here in this bug report. Same issue with Bug 442286.
Comment 5 Bug Janitor Service 2021-09-17 21:48:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/141
Comment 6 Nate Graham 2021-09-21 16:35:21 UTC
Git commit bb70d9c5a61d18800480f1c5be6c6e0bd240b796 by Nate Graham.
Committed on 21/09/2021 at 16:17.
Pushed by ngraham into branch 'master'.

Delete high contrast color scheme

This color scheme is a misnomer, and does not actually offer higher
contrast than other color schemes. In fact its contrast is generally
worse. As a result it hurts more than it helps. A true "high contrast
mode" would require changes to the QStyle to make UI elements larger or
change their borders to actually offer an improvement for people who
need higher contrast than what is offered by Breeze and Breeze Dark.

Accordingly, let's delete this color scheme and migrate current users to
Breeze Dark, which is the shipped theme that looks closest to it, and
has *better* contrast in many ways.
Related: bug 442286
FIXED-IN: 5.24

D  +0    -158  colors/BreezeHighContrast.colors
M  +0    -2    colors/CMakeLists.txt
M  +1    -0    misc/CMakeLists.txt
A  +8    -0    misc/breezehighcontrasttobreezedark/CMakeLists.txt
A  +3    -0    misc/breezehighcontrasttobreezedark/breezehighcontrasttobreezedark.upd
A  +23   -0    misc/breezehighcontrasttobreezedark/main.cpp  *

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://invent.kde.org/plasma/breeze/commit/bb70d9c5a61d18800480f1c5be6c6e0bd240b796